--- a/app/src/main/res/layout/home_category_item.xml
+++ b/app/src/main/res/layout/home_category_item.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/ord_itHomePage"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="6dp"
+    android:layout_marginBottom="5dp"
     android:background="@color/white"
-    android:orientation="vertical"
-    android:padding="0dp">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -29,16 +26,14 @@
                 android:gravity="center"
                 android:orientation="vertical">
 
-
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal|center_vertical"
                     android:orientation="vertical">
 
-
                     <ImageView
-                        android:id="@+id/itemIconHomePage"
+                        android:id="@+id/ivProductImage"
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:scaleType="centerCrop"
@@ -46,88 +41,49 @@
 
                 </LinearLayout>
 
-
             </LinearLayout>
 
-
             <LinearLayout
-
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_weight="3"
                 android:orientation="vertical">
 
-
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginBottom="5dp"
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/prd_name"
+                        android:id="@+id/tvProductName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
                         android:fontFamily="@font/roboto_regular"
                         android:gravity="left"
+                        android:padding="2dp"
                         android:text="Potato"
                         android:textAllCaps="false"
                         android:textColor="@color/light_black_3"
                         android:textSize="14sp" />
-
-
                 </LinearLayout>
 
-                <RelativeLayout
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="0dp">
+                    android:background="@color/white"
+                    android:visibility="visible">
 
-                    <LinearLayout
-                        android:id="@+id/lltvQnty"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="5dp"
-                        android:orientation="horizontal"
-                        android:visibility="visible">
-
-
-                        <TextView
-                            android:id="@+id/tv_qntyHomePage"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_gravity="center_vertical"
-                            android:fontFamily="@font/roboto_regular"
-                            android:text="1000kg"
-                            android:textAppearance="?android:attr/textAppearanceLarge"
-                            android:textColor="@color/light_black_1"
-                            android:textSize="12sp" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/llspnrQnty"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="0dp"
-                        android:background="@color/white"
-                        android:padding="0dp"
-                        android:visibility="visible">
-
-                        <Spinner
-                            android:id="@+id/spnr_qntyHomePage"
-                            android:layout_width="100dp"
-                            android:layout_height="30dp"
-                            android:layout_below="@+id/prd_name"
-                            android:padding="0dp"
-                            android:popupBackground="@android:drawable/dialog_holo_light_frame"
-                            android:spinnerMode="dropdown" />
-
-                    </LinearLayout>
-
-                </RelativeLayout>
+                    <Spinner
+                        android:id="@+id/spQuantity"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_below="@+id/prd_name"
+                        android:padding="5dp"
+                        android:popupBackground="@android:drawable/dialog_holo_light_frame"
+                        android:spinnerMode="dropdown" />
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -137,33 +93,31 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginBottom="5dp"
-                        android:layout_weight="1"
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/priceNewHomePage"
+                            android:id="@+id/tvNewPrice"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent"
                             android:fontFamily="@font/roboto_regular"
+                            android:padding="2dp"
                             android:text="$ 5000.0000"
                             android:textColor="@color/green_1"
                             android:textSize="12sp" />
 
                         <TextView
-                            android:id="@+id/priceOldHomePage"
+                            android:id="@+id/tvOldPrice"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent"
                             android:layout_marginLeft="10dp"
                             android:layout_marginRight="10dp"
                             android:background="@drawable/strike_through"
                             android:fontFamily="@font/roboto_regular"
+                            android:gravity="center"
                             android:text="$ 80"
                             android:textColor="@color/light_black_1"
-                            android:textSize="9sp" />
+                            android:textSize="10sp" />
                     </LinearLayout>
-
-
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
@@ -172,7 +126,6 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_gravity="right"
-            android:layout_marginBottom="5dp"
             android:layout_weight="2">
 
             <RelativeLayout
@@ -180,36 +133,37 @@
                 android:layout_height="match_parent">
 
                 <LinearLayout
-                    android:id="@+id/lladdItem"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginBottom="0dp"
                     android:gravity="bottom|right"
                     android:visibility="visible">
 
                     <ImageButton
                         android:id="@+id/btnAddItem"
-                        android:layout_width="48dp"
-                        android:layout_height="20dp"
+                        android:layout_width="60dp"
+                        android:layout_height="25dp"
                         android:background="@drawable/addbutton" />
 
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/llcountItem"
+                    android:id="@+id/llAccountItem"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="bottom|right"
                     android:visibility="gone">
 
                     <LinearLayout
-                        android:id="@+id/fl_decreaseCategList"
+                        android:id="@+id/llDecreaseCount"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center">
 
                         <ImageButton
-                            android:id="@+id/imgBtn_decre"
+                            android:id="@+id/ivBtnDecreaseCount"
                             android:layout_width="15dp"
                             android:layout_height="15dp"
                             android:layout_gravity="left|bottom"
@@ -217,7 +171,7 @@
                     </LinearLayout>
 
                     <TextView
-                        android:id="@+id/tv_productCount"
+                        android:id="@+id/tvProductCount"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -228,14 +182,14 @@
                         tools:textColor="@color/light_black_2" />
 
                     <LinearLayout
-                        android:id="@+id/fl_increaseCategList"
+                        android:id="@+id/llIncreaseCount"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center">
 
                         <ImageButton
-                            android:id="@+id/imgBtn_incre"
+                            android:id="@+id/ivBtnIncreaseCount"
                             android:layout_width="15dp"
                             android:layout_height="15dp"
                             android:layout_gravity="right|bottom"
@@ -244,8 +198,5 @@
                 </LinearLayout>
             </RelativeLayout>
         </LinearLayout>
-
     </LinearLayout>
-
-
 </android.support.v7.widget.CardView>
