--- a/app/src/main/res/layout/custom_action_item_layout.xml
+++ b/app/src/main/res/layout/custom_action_item_layout.xml
@@ -2,10 +2,10 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingRight="18dp"
-    android:paddingTop="5dp"
     android:clipToPadding="false"
-    android:focusable="true">
+    android:focusable="true"
+    android:paddingTop="5dp"
+    android:paddingRight="18dp">
 
     <ImageView
         android:layout_width="wrap_content"
