--- a/app/src/main/res/layout/home_category.xml
+++ b/app/src/main/res/layout/home_category.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:rsb="http://schemas.android.com/tools"
-    android:id="@+id/drawerHomeCateg"
+    android:id="@+id/drawerHomeCategory"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
@@ -10,29 +9,28 @@
     android:orientation="vertical">
 
     <RelativeLayout
-        android:id="@+id/mainviewHomeCateg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
         <include
-            android:id="@+id/toolbarHomeCateg"
-            layout="@layout/home_category_toolbar" />
+            android:id="@+id/toolbarHomeCategory"
+            layout="@layout/toolbar_home_new" />
 
         <LinearLayout
-            android:id="@+id/sortfilterSection"
+            android:id="@+id/llSortSection"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_below="@+id/toolbarHomeCateg"
+            android:layout_below="@+id/toolbarHomeCategory"
             android:background="@color/colorPrimary"
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tv_totalPrds"
-                android:layout_width="0dp"
+                android:id="@+id/tvTotalProduct"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="20dp"
-                android:layout_weight="6"
+                android:layout_weight=".1"
                 android:fontFamily="@font/roboto_regular"
                 android:gravity="center|left"
                 android:text="100 Products found"
@@ -40,30 +38,31 @@
                 android:textSize="16sp" />
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:padding="3dp">
+                android:layout_weight=".45"
+                android:gravity="center"
+                android:padding="2dp">
 
                 <ImageButton
-                    android:id="@+id/btn_listViewHomeCateg"
+                    android:id="@+id/ivbtnListView"
                     android:layout_width="22dp"
-                    android:layout_height="17dp"
-                    android:layout_gravity="center"
+                    android:layout_height="18dp"
                     android:background="@drawable/listview"
                     android:duplicateParentState="true" />
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginRight="3dp"
-                android:layout_weight="1">
+                android:layout_weight=".45"
+                android:gravity="center"
+                android:padding="2dp">
 
                 <ImageButton
-                    android:id="@+id/btn_filterHomeCateg"
+                    android:id="@+id/ivbtnFilter"
                     android:layout_width="22dp"
-                    android:layout_height="17dp"
+                    android:layout_height="18dp"
                     android:layout_gravity="center"
                     android:background="@drawable/filter"
                     android:duplicateParentState="true" />
@@ -75,7 +74,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@+id/navigation"
-            android:layout_below="@+id/sortfilterSection"
+            android:layout_below="@+id/llSortSection"
             android:orientation="vertical">
 
             <FrameLayout
@@ -85,7 +84,7 @@
                 android:orientation="vertical">
 
                 <com.mindorks.placeholderview.PlaceHolderView
-                    android:id="@+id/recycler_order"
+                    android:id="@+id/phvCategoryList"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@color/white">
@@ -93,18 +92,17 @@
                 </com.mindorks.placeholderview.PlaceHolderView>
 
                 <ProgressBar
-                    android:id="@+id/loadingHomeCateg"
+                    android:id="@+id/pbLoading"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:indeterminate="true" />
 
             </FrameLayout>
-
         </LinearLayout>
 
         <android.support.design.widget.BottomNavigationView
-            android:id="@+id/navigation"
+            android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
@@ -116,16 +114,14 @@
     </RelativeLayout>
 
     <LinearLayout
-        android:id="@+id/rlNavMenu"
         android:layout_width="300dp"
         android:layout_height="match_parent"
         android:layout_gravity="left"
         android:background="@color/white"
         android:orientation="vertical">
 
-
         <android.support.design.widget.NavigationView
-            android:id="@+id/nav_viewHomeCateg"
+            android:id="@+id/navLeftMenu"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="start"
@@ -140,7 +136,7 @@
             app:theme="@style/LeftNavTheme">
 
             <LinearLayout
-                android:id="@+id/llleftMenuLogOut"
+                android:id="@+id/llLeftMenuLogout"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_gravity="bottom"
