--- a/app/src/main/res/layout/home_category_grid_item.xml
+++ b/app/src/main/res/layout/home_category_grid_item.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/ord_itCategoryGrid"
     android:layout_width="150dp"
-    android:layout_height="180dp"
+    android:layout_height="170dp"
     android:layout_marginLeft="15dp"
-    android:layout_marginTop="12dp"
+    android:layout_marginTop="10dp"
     android:layout_marginRight="15dp"
     android:layout_marginBottom="20dp"
     android:elevation="25dp"
-    android:orientation="vertical"
     app:cardCornerRadius="3dp">
 
     <LinearLayout
@@ -18,33 +16,27 @@
         android:orientation="vertical">
 
         <LinearLayout
-            android:id="@+id/llProductsGrid"
+            android:id="@+id/llProductGridView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="10dp"
-            android:layout_weight="2"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingLeft="8dp"
-            android:paddingTop="8dp"
-            android:paddingRight="8dp"
-            android:paddingBottom="2dp">
+            android:padding="5dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="7"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_weight=".2"
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/titleCategoryGrid"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:id="@+id/tvProductName"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:fontFamily="@font/roboto_regular"
                         android:gravity="left"
                         android:text="Potato"
@@ -54,46 +46,44 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/llAddwishlist"
+                    android:id="@+id/llAddWishlist"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="6"
-                    android:gravity="right">
+                    android:layout_weight=".8"
+                    android:gravity="center">
 
                     <ImageButton
-                        android:id="@+id/likeCategoryGrid"
-                        android:layout_width="18dp"
-                        android:layout_height="16dp"
-                        android:background="@drawable/wishlistgrey"
-                        android:layout_gravity="center"/>
+                        android:id="@+id/ivbtnAddWishlist"
+                        android:layout_width="20dp"
+                        android:layout_height="18dp"
+                        android:layout_gravity="center"
+                        android:background="@drawable/wishlistgrey" />
                 </LinearLayout>
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="4"
-                android:gravity="center"
-                android:paddingTop="10dp">
+                android:layout_height="wrap_content"
+                android:gravity="center">
 
                 <ImageView
-                    android:id="@+id/imageCategoryGrid"
-                    android:layout_width="52dp"
-                    android:layout_height="58dp"
+                    android:id="@+id/ivImage"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:src="@drawable/deep" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="6"
-                android:gravity="center_horizontal">
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:padding="5dp">
 
                 <Spinner
-                    android:id="@+id/qtyCategoryGrid"
-                    android:layout_width="100dp"
-                    android:layout_height="40dp"
+                    android:id="@+id/spQuantity"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:fontFamily="@font/roboto_medium"
                     android:text="100Gms"
                     android:textColor="@color/light_black"
@@ -103,20 +93,18 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="7"
                 android:orientation="horizontal">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
                     android:gravity="center"
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/newPriceCategoryGrid"
+                        android:id="@+id/tvProdPrice"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_gravity="center|bottom"
                         android:fontFamily="@font/roboto_regular"
                         android:text="50.000"
@@ -125,13 +113,14 @@
                         android:textSize="12sp" />
 
                     <TextView
-                        android:id="@+id/oldPriceCategoryGrid"
+                        android:id="@+id/tvProdOldPrice"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_gravity="center|bottom"
                         android:layout_marginLeft="10dp"
                         android:background="@drawable/strike_through"
                         android:fontFamily="@font/roboto_regular"
+                        android:gravity="center"
                         android:text="20"
                         android:textAppearance="?android:attr/textAppearanceLarge"
                         android:textColor="@color/light_black_1"
@@ -152,7 +141,7 @@
                 android:layout_height="match_parent">
 
                 <LinearLayout
-                    android:id="@+id/llCountPrd"
+                    android:id="@+id/llProductCount"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@color/colorAccent"
@@ -163,7 +152,7 @@
                     android:visibility="gone">
 
                     <LinearLayout
-                        android:id="@+id/fl_decreaseCategGrid"
+                        android:id="@+id/llProductDecrese"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
@@ -173,7 +162,7 @@
                         android:paddingBottom="7dp">
 
                         <ImageButton
-                            android:id="@+id/imgBtn_decre"
+                            android:id="@+id/ivBtnDecrease"
                             android:layout_width="20dp"
                             android:layout_height="20dp"
                             android:layout_margin="5dp"
@@ -182,7 +171,7 @@
                     </LinearLayout>
 
                     <TextView
-                        android:id="@+id/tv_count"
+                        android:id="@+id/tvProductCount"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
@@ -193,7 +182,7 @@
                         android:textSize="15sp" />
 
                     <LinearLayout
-                        android:id="@+id/fl_increaseCategGrid"
+                        android:id="@+id/llProductIncrease"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
@@ -203,7 +192,7 @@
                         android:paddingBottom="7dp">
 
                         <ImageButton
-                            android:id="@+id/imgBtn_incre"
+                            android:id="@+id/ivBtnIncrease"
                             android:layout_width="20dp"
                             android:layout_height="20dp"
                             android:layout_margin="5dp"
@@ -213,9 +202,9 @@
                 </LinearLayout>
 
                 <Button
-                    android:id="@+id/btnAddCategoryGrid"
+                    android:id="@+id/btnAddCart"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:background="@color/colorAccent"
                     android:fontFamily="@font/roboto_medium"
                     android:text="Add To Cart"
