--- a/app/src/main/res/layout/home_category_toolbar.xml
+++ b/app/src/main/res/layout/home_category_toolbar.xml
@@ -4,27 +4,29 @@
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
     android:background="@color/colorPrimary"
-    app:contentInsetLeft="0dp"
-    app:contentInsetStart="0dp"
+    android:theme="@style/AppTheme1"
     app:contentInsetEnd="0dp"
+    app:contentInsetLeft="0dp"
     app:contentInsetRight="0dp"
+    app:contentInsetStart="0dp"
     app:contentInsetStartWithNavigation="0dp"
     app:subtitleTextColor="@color/white"
-    app:titleTextAppearance="@style/AppTheme.Toolbar.Title"
-    android:theme="@style/AppTheme1">
+    app:titleTextAppearance="@style/AppTheme.Toolbar.Title">
+
     <LinearLayout
-        android:id="@+id/llProfileIconCateg"
+        android:id="@+id/llProfileIconCategory"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="18dp"
-        android:layout_gravity="left">
+        android:layout_gravity="left"
+        android:layout_marginLeft="18dp">
 
-        <ImageButton
-            android:id="@+id/imgBtnProfileCateg"
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/ivToolbarImage"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:background="@drawable/profile_icon"
-            android:duplicateParentState="true"/>
+            android:background="@drawable/circle_view"
+            android:scaleType="centerCrop"
+            android:src="@drawable/camera" />
     </LinearLayout>
 
 </android.support.v7.widget.Toolbar>
