--- a/app/src/main/res/layout/home_page_list_of_products.xml
+++ b/app/src/main/res/layout/home_page_list_of_products.xml
@@ -7,36 +7,33 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_gravity="center"
-        android:paddingBottom="10dp">
+        android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/productsClick"
             style="@style/CodeFont"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingLeft="15dp"
-            android:layout_weight="3"
+            android:layout_weight=".3"
             android:gravity="center|left"
+            android:padding="10dp"
             android:text="@string/txt_ListProducts" />
 
         <TextView
-            android:id="@+id/tv_seeAllPrd"
+            android:id="@+id/tvViewAll"
+            style="@style/CodeFontSeeAll"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="7"
-            android:text="@string/txt_seeAll"
-            style="@style/CodeFontSeeAll"
+            android:layout_weight=".7"
             android:gravity="bottom|right"
-            android:paddingRight="10dp" />
+            android:padding="10dp"
+            android:text="@string/txt_seeAll" />
     </LinearLayout>
 
     <com.mindorks.placeholderview.PlaceHolderView
-        android:id="@+id/placeholderviewListProducts"
+        android:id="@+id/phvProductList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scrollbars="vertical"
-        android:paddingLeft="15dp"
-        android:layout_margin="0dp"/>
+        android:padding="10dp"
+        android:scrollbars="vertical" />
 </LinearLayout>
