--- a/app/src/main/res/layout/image_gallary_home_1.xml
+++ b/app/src/main/res/layout/image_gallary_home_1.xml
@@ -3,13 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    xmlns:card_view="http://schemas.android.com/tools"
     android:layout_marginTop="10dp"
     android:orientation="vertical"
     android:padding="0dp">
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/pager_home_1"
+        android:id="@+id/vpSliderImage"
         android:layout_width="fill_parent"
         android:layout_height="150dp"
         android:layout_alignParentTop="true"
@@ -18,7 +17,7 @@
         app:ci_width="5dp" />
 
     <android.support.design.widget.TabLayout
-        android:id="@+id/indicator_home_1"
+        android:id="@+id/tabIndicator"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_alignParentBottom="true"
