--- a/app/src/main/res/layout/new_product_detail_home.xml
+++ b/app/src/main/res/layout/new_product_detail_home.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbarPrdDetail"
+        android:id="@+id/toolbarSingleProduct"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
@@ -24,7 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/footerPrdDetail"
-        android:layout_below="@+id/toolbarPrdDetail"
+        android:layout_below="@+id/toolbarSingleProduct"
         android:layout_alignParentStart="true"
         android:layout_marginTop="-3dp"
         android:layout_marginBottom="3dp">
@@ -44,11 +44,10 @@
                 android:padding="30dp">
 
                 <com.mindorks.placeholderview.PlaceHolderView
-                    android:id="@+id/img_list_PrdDetails"
+                    android:id="@+id/phvSingleProductImage"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scrollbars="horizontal" />
-
             </LinearLayout>
 
             <LinearLayout
@@ -56,130 +55,109 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/prd_layoutPrdDetail"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:background="@color/white"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp">
+                android:background="@color/white">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
                     android:background="@color/white"
                     android:gravity="left"
-                    android:orientation="vertical"
-                    android:layout_marginBottom="5dp">
+                    android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/titlePrdDetail"
+                        android:id="@+id/tvPrdName"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:fontFamily="@font/roboto_medium"
                         android:gravity="left"
-                        android:padding="5dp"
-                        android:text=""
+                        android:padding="8dp"
+                        android:text="Potato"
                         android:textColor="@color/black"
                         android:textSize="18sp" />
-
-                    <LinearLayout
-                        android:id="@+id/reviewLayoutPrdDetail"
-                        android:layout_width="match_parent"
-                        android:layout_height="30dp"
-                        android:layout_marginTop="5dp"
-                        android:orientation="horizontal">
-
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="6"
-                            android:background="@color/white"
-                            android:orientation="horizontal"
-                            android:layout_marginLeft="5dp">
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="match_parent"
-                                android:layout_marginRight="10dp"
-                                android:fontFamily="@font/roboto_medium"
-                                android:gravity="center_vertical|right"
-                                android:text="Qty:"
-                                android:textColor="@color/blackshadow"
-                                android:textSize="15sp"
-                                android:padding="5dp"/>
-
-                            <Spinner
-                                android:id="@+id/qntyPrdDetail"
-                                android:layout_width="120dp"
-                                android:layout_height="match_parent"
-                                android:background="@drawable/product_detail_spinner"
-                                android:padding="0dp"
-                                android:spinnerMode="dropdown" />
-                        </LinearLayout>
-                    </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
 
-                        <LinearLayout
-                            android:id="@+id/priceViewPrdDetail"
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:fontFamily="@font/roboto_medium"
+                            android:gravity="center_vertical|right"
+                            android:padding="8dp"
+                            android:text="Qty:"
+                            android:textColor="@color/blackshadow"
+                            android:textSize="15sp" />
+
+                        <Spinner
+                            android:id="@+id/spQuantity"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
-                            android:layout_weight="2"
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginRight="25dp"
+                            android:background="@drawable/product_detail_spinner"
+                            android:padding="8dp"
+                            android:spinnerMode="dropdown" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:orientation="horizontal">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center"
+                            android:layout_weight=".3"
                             android:orientation="horizontal">
 
                             <TextView
-                                android:id="@+id/originalPricePrdDetail"
+                                android:id="@+id/tvNewPrice"
                                 android:layout_width="wrap_content"
-                                android:layout_height="20dp"
+                                android:layout_height="match_parent"
                                 android:fontFamily="@font/roboto_medium"
                                 android:gravity="center|left"
+                                android:padding="8dp"
                                 android:text="₹ 50"
                                 android:textColor="@color/black"
                                 android:textSize="15dp" />
 
-                            <LinearLayout
+                            <TextView
+                                android:id="@+id/tvOldPrice"
                                 android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
-                                android:layout_marginLeft="10dp"
-                                android:layout_marginRight="10dp"
-                                android:gravity="left|bottom">
-
-                                <TextView
-                                    android:id="@+id/tvDisPricePrdDetail"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:background="@drawable/strike_through_1"
-                                    android:fontFamily="@font/roboto_medium"
-                                    android:text="₹ 80"
-                                    android:textColor="@color/black"
-                                    android:textSize="10dp"
-                                    android:visibility="visible"/>
-                            </LinearLayout>
-
+                                android:background="@drawable/strike_through_1"
+                                android:fontFamily="@font/roboto_medium"
+                                android:gravity="center"
+                                android:padding="5dp"
+                                android:text="₹ 80"
+                                android:textColor="@color/black"
+                                android:textSize="12dp"
+                                android:visibility="visible" />
                         </LinearLayout>
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:layout_weight="8"
-                            android:orientation="horizontal"
-                            android:layout_marginTop="10dp">
+                            android:layout_weight=".7"
+                            android:orientation="horizontal">
+
                             <LinearLayout
                                 android:id="@+id/llAddToCart"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
+                                android:gravity="center"
                                 android:visibility="visible">
+
                                 <ImageButton
                                     android:id="@+id/btnAddItem"
-                                    android:layout_width="48dp"
-                                    android:layout_height="20dp"
+                                    android:layout_width="70dp"
+                                    android:layout_height="30dp"
                                     android:background="@drawable/addbutton"
-                                    android:duplicateParentState="true"/>
-
+                                    android:duplicateParentState="true" />
                             </LinearLayout>
 
                             <LinearLayout
@@ -189,14 +167,14 @@
                                 android:visibility="gone">
 
                                 <ImageButton
-                                    android:id="@+id/imgBtn_decre"
+                                    android:id="@+id/ivBtnDecrease"
                                     android:layout_width="15dp"
                                     android:layout_height="15dp"
                                     android:layout_gravity="left|bottom"
                                     android:background="@drawable/blackdecre" />
 
                                 <TextView
-                                    android:id="@+id/tv_productCount"
+                                    android:id="@+id/tvProductCount"
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
                                     android:layout_weight="1"
@@ -207,18 +185,15 @@
                                     tools:textColor="@android:color/black" />
 
                                 <ImageButton
-                                    android:id="@+id/imgBtn_incre"
+                                    android:id="@+id/ivBtnIncrease"
                                     android:layout_width="15dp"
                                     android:layout_height="15dp"
                                     android:layout_gravity="right|bottom"
                                     android:background="@drawable/blackincr" />
                             </LinearLayout>
-
                         </LinearLayout>
                     </LinearLayout>
                 </LinearLayout>
-
-
             </LinearLayout>
 
             <LinearLayout
@@ -233,7 +208,6 @@
 
                 <LinearLayout
                     android:id="@+id/ll_similar_prd"
-                    android:visibility="gone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
@@ -250,11 +224,10 @@
                 </LinearLayout>
 
                 <com.mindorks.placeholderview.PlaceHolderView
-                    android:id="@+id/similarPrdDetail"
+                    android:id="@+id/phvSimilarProduct"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:scrollbars="vertical" />
-
             </LinearLayout>
 
             <LinearLayout
@@ -267,7 +240,7 @@
                 <WebView
                     android:id="@+id/webViewDesc"
                     android:layout_width="fill_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="fill_parent" />
             </LinearLayout>
 
         </RelativeLayout>
